--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Odin Recipes</title>
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="page-title">Odin Recipes</h1>
         <ol>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/ultimate_carbonara.html">Ultimate spaghetti carbonara</a></li>
