--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTFO-8">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../style.css">
         <title>Classic Lasagna</title>
     </head>
     <body>
